--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ __pycache__/
 .DS_Store
 Thumbs.db
 
+#binario driver
+chromedriver.exe
+
 # Archivo de resultados (salida del scraping)
 resultado.xlsx
 
