--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 attrs==25.3.0
 beautifulsoup4==4.13.4
 certifi==2025.6.15
-charset-normalizer==3.4.2
-exceptiongroup==1.3.0
+cffi==1.17.1
+et_xmlfile==2.0.0
 h11==0.16.0
 idna==3.10
-lxml==5.4.0
+openpyxl==3.1.5
 outcome==1.3.0.post0
+pillow==11.2.1
+pycparser==2.22
 PySocks==1.7.1
-requests==2.32.4
 selenium==4.33.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
